# bichon

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  example.md  index.md
.github/workflows/: cmake.yml
cmake/: CMakeColors.cmake  DownloadProject.CMakeLists.cmake.in  FindMPFR.cmake  PrismDependencies.cmake  PrismDownloadExternal.cmake  Warnings.cmake  geogram.cmake
python/: cumin_datagen.py  format_utils.py  vis_utils.py  vtk_node_ordering.py
python/cadconvert/: bezier.py  fem_tabulator.py  occ-export.py  occ_step.py  quad_curve_utils.py  quad_utils.py  tensor-product-fit.py
python/curve/: fem_generator.py  gmsh_helper.py
python/curve/data/: p3_quniform5_dxyz.h5  p4_quniform5_dxyz.h5  p5_quniform5_dxyz.h5  p6_quniform5_dxyz.h5  tetra_o3_l2b.h5  tetra_o4_l2b.h5  tetra_o5_l2b.h5  tetra_o6_l2b.h5  tetra_o7_l2b.h5  tetra_o8_l2b.h5  tetra_o9_l2b.h5  tri_o1_lv3.h5  tri_o2_lv3.h5  tri_o3_lv3.h5  tri_o4_lv3.h5
python/interpolate/: cubic_spline.py  hierachical_spline.py  simple_cubic_spline.py  simple_quadratic_spline.py
src/: CMakeLists.txt  curve_in_shell.cpp  pipeline_schedules.cpp
src/batm/: AMIPS.h  AdaMesh.hpp  AdaMesh_insert.cpp  AdaMesh_smooth.cpp  surface_insert.cpp  surface_insert.hpp  tetra_logger.cpp  tetra_logger.hpp  tetra_quality.cpp  tetra_remesh_pass.cpp  tetra_remesh_pass.hpp  tetra_size_control.cpp  tetra_utils.cpp  tetra_utils.hpp
src/cumin/: bernstein_eval.cpp  bernstein_eval.hpp  curve_common.hpp  curve_pass.cpp  curve_utils.cpp  curve_utils.hpp  curve_validity.cpp  curve_validity.hpp  high_order_optimization.cpp  high_order_optimization.hpp  inversion_check.cpp  inversion_check.hpp  stitch_surface_to_volume.cpp  stitch_surface_to_volume.hpp  tetshell_utils.cpp  tetshell_utils.hpp
src/prism/: PrismCage.cpp  PrismCage.hpp  bevel_utils.cpp  bevel_utils.hpp  cage_check.cpp  cage_check.hpp  cage_utils.cpp  cage_utils.hpp  common.hpp  extraction.cpp  extraction.hpp  feature_utils.cpp  feature_utils.hpp  intersections.cpp  intersections.hpp  polyshell_utils.cpp  polyshell_utils.hpp
src/prism/cgal/: QP.cpp  QP.hpp  boolean.cpp  boolean.hpp  polyhedron_self_intersect.cpp  polyhedron_self_intersect.hpp  tetrahedron_tetrahedron_intersection.cpp  tetrahedron_tetrahedron_intersection.hpp  triangle_tetrahedron_intersection.cpp  triangle_tetrahedron_intersection.hpp  triangle_triangle_intersection.cpp  triangle_triangle_intersection.hpp
src/prism/energy/: map_distortion.cpp  map_distortion.hpp  prism_quality.cpp  prism_quality.hpp  smoother_pillar.cpp  smoother_pillar.hpp
src/prism/geogram/: AABB.cpp  AABB.hpp  AABB_tet.cpp  AABB_tet.hpp  geogram_utils.cpp  geogram_utils.hpp
src/prism/local_operations/: local_mesh_edit.cpp  local_mesh_edit.hpp  mesh_coloring.cpp  mesh_coloring.hpp  remesh_pass.cpp  remesh_pass.hpp  remesh_pass_collapse.cpp  remesh_pass_feature.cpp  remesh_pass_polyshell.cpp  remesh_with_feature.hpp  retain_triangle_adjacency.cpp  retain_triangle_adjacency.hpp  section_remesh.cpp  section_remesh.hpp  smooth_pass.cpp  triangle_tuple.cpp  triangle_tuple.h  validity_checks.cpp  validity_checks.hpp
src/prism/osqp/: osqp_normal.cpp  osqp_normal.hpp
src/prism/phong/: projection.cpp  projection.hpp  query_correspondence.cpp  query_correspondence.hpp  tangent_orientation.cpp  tangent_orientation.hpp  trilinear_projection.cpp
src/prism/predicates/: inside_octahedron.cpp  inside_octahedron.hpp  inside_prism_tetra.cpp  inside_prism_tetra.hpp  positive_prism_volume_12.cpp  positive_prism_volume_12.hpp  tetrahedron_overlap.cpp  tetrahedron_overlap.hpp  triangle_triangle_intersection.cpp  triangle_triangle_intersection.hpp
src/prism/spatial-hash/: AABB_hash.cpp  AABB_hash.hpp  self_intersection.cpp  self_intersection.hpp
src/python/: CMakeLists.txt  curve.cpp  module.cpp  prism.cpp  spatial.cpp
tests/: CMakeLists.txt  bevel_init.cpp  cgal_AABB.cpp  cgal_qp.cpp  chain_mail.cpp  clean_extraction.cpp  curve_fitting.cpp  curved_tetra_mips.cpp  doo_sabin.cpp  feature_parse_bin.cpp  graded-sphere-test-config.json  insert_points.cpp  numerical_self_intersection.cpp  phong.cpp  predicates.cpp  qslim_bin.cpp  qslim_shell.cpp  read_binary.cpp  remesh_shell_bin.cpp  sizing_background_mesh.cpp  spatial_hash.cpp  sphere_refine.cpp  surface_stitch.cpp  tangential_smooth_bin.cpp  test_common.hpp  test_main.cpp  tetra_opt.cpp  zig_shell_collapse.cpp
